--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 data filter=lfs diff=lfs merge=lfs -text
 resfinder filter=lfs diff=lfs merge=lfs -text
+fastqc filter=lfs diff=lfs merge=lfs -text
+quast filter=lfs diff=lfs merge=lfs -text
